--- a/commonlibrary/src/main/res/values/colors.xml
+++ b/commonlibrary/src/main/res/values/colors.xml
@@ -25,7 +25,7 @@
     <!--<color name="custom_color_app_content_div">#FF191919</color>    -->
 
     <!--#FFF6F8FA     公共的#ECF1F5  -->
-    <color name="custom_color_app_bg">#FFF6F8FA</color>
+    <color name="custom_color_app_bg">#F0F5F8</color>
     <color name="custom_color_app_title_bg">#ffffffff</color>
     <color name="custom_color_app_content_bg">#ffffffff</color>
     <color name="custom_color_text_main">@color/black</color>
