--- a/chat/src/main/res/layout/item_fragment_friends.xml
+++ b/chat/src/main/res/layout/item_fragment_friends.xml
@@ -32,7 +32,7 @@
             android:id="@+id/iv_item_fragment_friends_avatar"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/head"/>
+            android:background="@drawable/custom_drawable_place_holder"/>
         <TextView
             android:tag="skin"
 
