--- a/video/src/main/module/res/layout/activity_video.xml
+++ b/video/src/main/module/res/layout/activity_video.xml
@@ -2,13 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
 
 
-    <FrameLayout
-        android:id="@+id/fl_activity_video_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+   <com.example.commonlibrary.customview.WrappedViewPager
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:id="@+id/wvp_activity_video_display"/>
 
 </LinearLayout>
